--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -61,6 +61,10 @@
                     <td data-bind="text: time"></td>
                 </tr>
                 <tr>
+                    <td>Iterations</td>
+                    <td data-bind="text: iterations"></td>
+                </tr>
+                <tr>
                     <td>Cached</td>
                     <td data-bind="text: isCached"></td>
                 </tr>
@@ -89,7 +93,7 @@
 
     .results {
         width: 100%;
-        height:450px;
+        height: 450px;
     }
 </style>
 
