* Add: #21 Querying total count of documents. * Add: AbstractStorage requires:   * to return a string with the storage engines name, for later status information.   * Add: getDocCount() => Count of all documents.   * Add: getElements() => i.e. number of tokens in eine document. * Change: Partially implemented #3, i.e. all tokens are loaded from the database at once since the ParserConsumer stores now all elements types in one hash per document. This data is then cached in GraphQLSchema. This needs a smarter solution (see related GraphQL dataLoaders). * Change: Moving CasImporter to http-server and allowing to start the import via web-UI, one step towards #18, #20.  * The HttpServer is now the main UI for controlling the application.  * Add: Import button on web-UI. * Change: Overall small refactorings, changing MetaQuery class to CasImporter. Renaming routes, query and import must now POST to server.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -31,7 +31,7 @@
             <form>
                 <div class="form-group">
                     <label class="form-label">Query</label>
-                    <textarea class="results" id="query"></textarea>
+                    <textarea class="results" data-bind="value: query"></textarea>
                 </div>
             </form>
         </div>
@@ -80,8 +80,11 @@
     <div class="divider"></div>
 
     <div class="columns">
-        <div class="column col-12">
-            <button id="execute" class="btn btn-primary btn-lg">Execute <i class="icon icon-check"></i></button>
+        <div class="column col-2">
+            <button data-bind="event: { click: executeQuery }" class="btn btn-primary btn-block btn-lg">Execute <i class="icon icon-check"></i></button>
+        </div>
+        <div class="column col-2">
+            <button data-bind="event: {click: startImport}" class="btn btn-primary btn-block btn-lg">Start import</button>
         </div>
     </div>
 </div>
